<resources>
    <string name="app_name">WorkingWithIntents</string>
    <string name="first_screen">First Screen</string>
    <string name="second_screen">Second Screen</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="click_me">Click Me</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_message">Confirm Your input(Yes/No)</string>
    <string name="confirm">Confirm</string>
</resources>
